public abstract class BasicText implements HTMLText {
    
    public String toString() {
        return source();
    }
}
