public class BoldText extends FormatText {

    private static final String ELEMENT = "b";

    public BoldText(HTMLText content) {
        super(content, ELEMENT);
    }
}
