

public interface HTMLText {

    String source();

}
