public class ItalicText extends FormatText {

    private static final String ELEMENT = "i";

    public ItalicText(HTMLText content) {
        super(content, ELEMENT);
    }
}
